Removed most bg/fg colors changed initial position of solverpopup to put it in footer changed z-index of Go button to support moving it

--- a/course/solver.css
+++ b/course/solver.css
@@ -1,7 +1,7 @@
 .solverpopup
 {
 	position: absolute;
-	top: 35%;
+	top: 55%;
 	right: 5px;
 	height: auto;
 	max-width: 450px;
@@ -9,17 +9,12 @@
 	margin: 0;
 	margin-left: 0.5em;
 	margin-top: 0.5em;
-	border: 1px solid black;
-	background: #F8F8F8; 
 	z-index: 11;
 	overflow: visible;
 }
 #solvertopbar {
-	background: #369; /* Blue from standard menu bar */
 	width: 100%;
-	color: #fff;
 	font-size: 10px;
-	font-family: arial;
 	font-weight: bold;
 	margin-right: 5px;
 	cursor: pointer;
@@ -74,19 +69,16 @@ div#sagecelloutput {
 }
 #sagetocontroldiv {
 	padding: 3px;
-	text-align: center;
-	color: #555;
+}
+#sagetocontrolresult {
 }
 #sagetocontrol {
-	text-align: center;
 	padding: 30px;
 	margin: 30px;
-	color: #000;
+	font-weight: bold;
 }
 #solvergobutton {
-	background-color: #606; /* purple from standard menu bar */
     border: none;
-    color: white;
     padding: 2px;
     text-align: center;
     text-decoration: none;
@@ -97,6 +89,7 @@ div#sagecelloutput {
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+	z-index: 5;
 }
 #solvergobutton:hover {
     box-shadow: 2px 6px 6px 0 rgba(0,0,0,0.24),0 7px 20px 0 rgba(0,0,0,0.19);
